--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/throttle-debounce": "^2.1.0",
+    "commitizen": "^4.1.2",
     "css-loader": "^3.2.1",
+    "cz-conventional-changelog": "3.2.0",
     "electron": "^8.0.1",
     "electron-log": "^4.0.6",
+    "husky": "^4.2.5",
     "node-sass": "^4.12.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -54,5 +57,16 @@
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "throttle-debounce": "^2.1.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
+      "pre-push": "yarn compile"
+    }
   }
 }
