chore(package.json): fix pre-push hook command

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "husky": {
     "hooks": {
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
-      "pre-push": "yarn compile"
+      "pre-push": "yarn"
     }
   }
 }
