--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "immer": "^3.1.3",
     "isomorphic-git": "^1.7.3",
     "js-yaml": "3.13.1",
+    "keytar": "^6.0.1",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "throttle-debounce": "^2.1.0"
