--- a/package.json
+++ b/package.json
@@ -11,17 +11,13 @@
     "prepublish": "rm -rf dist; tsc; cp package-dist.json dist/package.json; rsync -avm --include='*.js' --include='*.scss' --include='*.css' --include='*.d.ts' -f 'hide,! */' ./src/ ./dist"
   },
   "peerDependencies": {
-    "@blueprintjs/core": "^3.20.0",
-    "@blueprintjs/icons": "^3.12.0",
-    "css-loader": "^3.0.0",
-    "electron": "^8.2.4",
+    "@blueprintjs/core": "^3.28.2",
+    "@blueprintjs/icons": "^3.18.1",
+    "electron": "^9.1.1",
     "electron-log": "^4.2.2",
-    "electron-webpack": "^2.7.4",
-    "electron-webpack-ts": "^3.2.0",
+    "electron-webpack": "^2.8.2",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "typescript": "^3.7.2",
-    "webpack": "~4.41.5"
+    "react-dom": "^16.11.0"
   },
   "devDependencies": {
     "@blueprintjs/core": "^3.20.0",
@@ -44,19 +40,17 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "sass-loader": "^8.0.2",
-    "typescript": "^3.7.2",
-    "webpack": "~4.41.5"
+    "ts-loader": "^8.0.1",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.0"
   },
   "dependencies": {
     "async-lock": "^1.2.2",
     "fs-extra": "^8.1.0",
-    "immer": "^3.1.3",
     "isomorphic-git": "^1.7.3",
-    "js-yaml": "3.13.1",
+    "js-yaml": "3.14.0",
     "keytar": "^6.0.1",
     "moment": "^2.24.0",
-    "node-fetch": "^2.6.0",
-    "throttle-debounce": "^2.1.0"
   },
   "config": {
     "commitizen": {
