feat(db/isogit): un-break worker in packaged apps
Relates to https://github.com/glossarist/glossarist-desktop/issues/91

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "js-yaml": "3.14.0",
     "keytar": "^6.0.1",
     "moment": "^2.24.0",
+    "threads": "^1.6.3"
   },
   "config": {
     "commitizen": {
