--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
       "noFallthroughCasesInSwitch": true,
       "noImplicitReturns": true,
 
+      "sourceMap": true,
       "inlineSources": true,
-      "inlineSourceMap": true,
 
       "allowSyntheticDefaultImports": true,
       "experimentalDecorators": true,
