--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "resolutions": {
     "minimist": "1.2.3",
+    "elliptic": "6.5.3",
     "kind-of": "6.0.3"
   },
   "peerDependencies": {
